'push by pim@rodin+linux+5.15.119+quiqr-desktop-app-0.17.14'

--- a/themes/Hugo Conference/layouts/partials/nav.html
+++ b/themes/Hugo Conference/layouts/partials/nav.html
@@ -1,11 +1,14 @@
 <nav id="nav">
   <ul class="wrapper">
-    {{ range $section := $.Site.Params.Sections }}
+    {{ range $.Site.Params.menu }}
+            {{ if not .disabled }}
+      
       <li class="nav-item">
-        <a href="#{{ $section }}" target="_blank" title="{{ index $.Site.Params.Titles $section }}" class="nav-link">
-          {{ index $.Site.Params.Titles $section }}
+        <a href="{{ .url }}" title="{{ .title }}" class="nav-link">
+          {{ .title }}
         </a>
       </li>
+    {{ end }}
     {{ end }}
   </ul>
 
