--- a/themes/Hugo Conference/layouts/partials/header.html
+++ b/themes/Hugo Conference/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <h2 class="tagline">{{ .date }} - {{ .city }}</h2>
     <h1 class="logo-name">
-      <a class="logo-link" href="#" title="{{ .name }}" itemprop="name">{{ .name }}</a>
+      {{ .name }}
     </h1>
 
     <div class="call-action-area" style="display:none;">
