--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: 'Miracode';
+    src: url('/Miracode.woff2') format('woff2'),
+        url('/Miracode.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 
 
 
@@ -288,7 +297,6 @@ hr {
    ========================================================================== */
 .wrapper {
   margin: 0 auto;
-  xxxwidth: 960px;
   position: relative;
 }
 .content {
@@ -308,9 +316,8 @@ hr {
 body{
   background-image: url(/img/bg4.jpg);
   background-attachment: fixed;
-  xxxfont-family: Miracode;
-  xxcolor: #ffc80fl;
   color: #ffff01;
+  text-shadow: 1px 1px 2px black;
 }
 
 
