--- a/themes/Hugo Conference/layouts/_default/baseof.html
+++ b/themes/Hugo Conference/layouts/_default/baseof.html
@@ -12,8 +12,8 @@
   {{ template "_internal/opengraph.html" . }}
   {{ template "_internal/twitter_cards.html" . }}
 
-  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
+  <link rel="shortcut icon" href="/fav/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="/fav/apple-touch-icon.png">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
@@ -34,19 +34,19 @@
           {{ if templates.Exists ( printf "partials/%s" $partialPath ) }}
             {{ if not .disabled }}
               <a id="{{.title}}" class="hiddena" ></a>
-              <div style="
+              <div
+                style="
                  {{ with .bg_image }}
                  background-image:url(/images/backgrounds/{{.}});
                   {{ end }}
 
                 {{ with .margin }}
-                margin: {{.}};
+                margin: {{. | safeCSS }};
                 {{ end }}
 
                 {{ with .padding }}
-                padding: {{.}};
+                padding: {{. | safeCSS }};
                 {{ end }}
-
                  ">
               {{ partial (print "content_blocks/" (lower (replace .content_type "_" "-"))) (dict "context" . "contextSite" $.Site "contextPage" $.Page )}}
               </div>
