'push by pim@rodin+linux+5.15.119+quiqr-desktop-app-0.17.14'

--- a/themes/Hugo Conference/layouts/partials/content_blocks/block-centercontent.html
+++ b/themes/Hugo Conference/layouts/partials/content_blocks/block-centercontent.html
@@ -12,7 +12,7 @@
       <div class="d-flex justify-content-center">
         <div>
             <img loading="lazy" class="ximg-fluid xw-100" style="width:100px;" src="/images/title_icons/{{ .title_icon }}" />
-            <img loading="lazy" class="ximg-fluid xw-100" src="/images/title_images/{{ .title_image }}" />
+            <img loading="lazy" style="width:50%;"  class="ximg-fluid xw-100" src="/images/title_images/{{ .title_image }}" />
         </div>
       </div>
 
